Passing a bunch of functional test to handle post workflow with authenticated users.

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,9 +1,5 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  body: MyText
-
-two:
-  title: MyString
-  body: MyText
+paper:
+  title: Swift 101
+  body: The Swift programming language was announced at the WWDC 2014.
